automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Icebreakers</title>
+    <title>Icebreakers</title>  
   </head>
 
   <body>
-
+    <header><nav></nav></header>
   </body>
 </html>
