--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <header>
       <nav>
-        <ul></ul>
+        <ul>
+          <li>Page 1</li>
+          <li>Page 2</li>
+        </ul>
       </nav>
     </header>
   </body>
